Improve pathfinding and rotation logic
Refactors and enhances the pathfinding system with better neighbor selection, step and slab handling, and more efficient data structures (using fastutil). RotationManager is simplified and now supports smoother, more human-like rotation transitions. Path smoothing, cost calculations, and block walkability checks are improved for more natural movement. Various bug fixes and code cleanups are included.